--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>視覺化探索</title>
+<title>help</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
 <body>
 	<h1><font face="DFKai-sb">生醫物件之視覺化探索</font></h1>
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+        <li><a href="104專題生.html">Home</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">搜尋方式<span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="Network/index.php">物件關聯網絡圖</a></li>
@@ -24,12 +24,12 @@
         	<ul class="dropdown-menu">
                 <li><a href="http://ctdbase.org/" target="_blank">Comparative Toxicogenomics Database | CTD</a></li>
             </ul>
-        <li><a href="help.html">Help</a></li>
+        <li class="active"><a data-toggle="tab" href="#help">Help</a></li>
         </li>
     </ul>
     <div class="tab-content">
-    	<div id="home" class="tab-pane fade in active">
-        	<h3>這裡是首頁</h3>
+    	<div id="help" class="tab-pane fade in active">
+        	<h3>這裡是幫助</h3>
         </div>
     </div>
 </body>
